2011-08-11  Anders Carlsson  <andersca@apple.com>

        Add a FIXME.

        * TestWebKitAPI/TestsController.cpp:
        (TestWebKitAPI::TestsController::TestsController):

2011-08-11  Anders Carlsson  <andersca@apple.com>

        Initialize threading before running any tests
        https://bugs.webkit.org/show_bug.cgi?id=66112

        Reviewed by Adam Barth.

        * TestWebKitAPI/TestsController.cpp:
        (TestWebKitAPI::TestsController::TestsController):

2011-08-11  Adam Barth  <abarth@webkit.org>

        Add unexpected-passes.html to TestFailures for marking tests as passing
        https://bugs.webkit.org/show_bug.cgi?id=66102

        Reviewed by Dimitri Glazkov.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/garden-o-matic.html:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/main.js:
            - Move some code into the library so it can be shared.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/model.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/ui.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/ui_unittests.js:
            - Add round-trip unit tests.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/unexpected-passes.html: Added.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/unexpected-passes.js: Added.
            - I'm not entirely sure this feature should remain a separate HTML
              file, but it seemed better than cluttering up the main HTML file
              with too much extra stuff.
        * Scripts/webkitpy/tool/servers/gardeningserver.py:
        * Scripts/webkitpy/tool/servers/gardeningserver_unittest.py:
            - The gardening server couldn't handle adding PASS expectations.  Now it can.

2011-08-11  Eric Seidel  <eric@webkit.org>

        NRWT has wrong fallback order for Mac now that Lion exists