@@ -1,3 +1,11 @@
+2011-08-11  Mark Rowe  <mrowe@apple.com>
+
+        Rework some Makefile logic to remove a double-negative.
+
+        Reviewed by Jon Honeycutt.
+
+        * DumpRenderTree/mac/PerlSupport/Makefile:
+
 2011-08-11  Anders Carlsson  <andersca@apple.com>
 
         Add a FIXME.
